...
                                                <accessibility key="accessibilityConfiguration" identifier="imageImportIdentifier" label="imageImportLabel"/>
                                                <state key="normal" title="Click Here To Import Pofile Picture"/>
                                                <connections>
                                                    <action selector="onClickImportImageButton:" destination="qNq-7n-LYa" eventType="touchUpInside" id="nnX-ND-87i"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JAi-2B-jf8">
                                                <rect key="frame" x="15" y="406" width="50" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.21176470589999999" green="0.63137254899999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HMv-R4-HcH">
...
                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBv-O0-pBk">
                                <rect key="frame" x="181.5" y="632" width="51" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="logoutIdentifier" label="logoutLabel"/>
                                <state key="normal" title="LogOut"/>
                                <connections>
                                    <action selector="onClickLogOut:" destination="Qod-wQ-WUt" eventType="touchUpInside" id="4dz-NG-EpP"/>
                                </connections>
                            </button>
                        </subviews>
...
